tests/test_proof/bad/array_length-empty.catala_en
## Test

```catala
declaration scope A:
  internal x content collection integer
  output y content boolean

scope A:
  definition x equals [0; 5]
  definition y under condition (number of x) > 0 consequence equals true
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] [A.y] This variable might return an empty error:
┌─⯈ tests/test_proof/bad/array_length-empty.catala_en:6.10-6.11:
└─┐
6 │   output y content boolean
  │          ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
